# backend/src/routes/index.js
@@ -3,6 +3,7 @@ import apiRoutes from './api.routes.js';
 import authRoutes from './auth.routes.js';
 import rolesRoutes from './roles.routes.js';
 import usersRoutes from './users.routes.js';
+import ticketRoutes from './ticket.routes.js';
 
 const router = Router();
 
@@ -12,5 +13,8 @@ router.use('/api', apiRoutes);
 router.use('/api/auth', authRoutes);
 router.use('/api/roles', rolesRoutes);
 router.use('/api/users', usersRoutes);
+router.use('/api/tickets', ticketRoutes);
+
+export { router as routes };
 
 export default router;
